2002-03-15  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: Added AM_MAINTAINER_MODE.

2002-03-13  Martin Weber <martweb@gmx.net>

	(Logged by Masatake.)
	
	* output-pdf.c (output_pdf_tailor): 
	Put a space at the end of  OUT_LINE
	and OUT1.

	* output-pdf.c (output_pdf_writer): 
	Print warnings if _WINDOWS is defined.

	Message-ID: <3C8C7F1D.ACD14953@gmx.net>.
	
2002-03-13  Masatake YAMATO  <yamato@redhat.com>

	* output-pdf.c (output_pdf_writer): 
	removed a garbage that I had put.
	Suggested by Martin.

2002-03-11  Martin Weber <martweb@gmx.net>

	* output-pdf.c: Fix a bug in xref table generator.

	Message-ID: <3C88FA48.F3DC2CF5@gmx.net>.

2002-03-08  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.spec.in: copyed from
	http://www.cs.uu.nl/~hanwen/public/software/autotrace.spec.
	Contributed by Han-Wen Nienhuys<hanwen@cs.uu.nl>.
	
	* configure.in: Added autotrace.spec supports.

	* Masatake.am: Likewise.

2002-03-08  Martin Weber <martweb@gmx.net>

	* output-pdf.c: pdf files now contain a xref table.

	Message-ID: <3C87C8F3.6130373F@gmx.net>.

2002-03-08  Martin Weber <martweb@gmx.net>

	* fit.c (filter): Put the definition 
	of prev_new_point out of the loop.

	(distance): Don't use hypot.

	Message-ID: <3C87B48C.82FAC8CF@gmx.net>.
	
2002-03-06  Martin Weber <martweb@gmx.net>

	* curve.c: Corrected copyright notice

	* fit.c: Likewise.

	Message-ID: <3C84F316.2DB5B7A1@gmx.net>.

2002-03-06  Martin Weber <martweb@gmx.net>

	* autotrace.vcproj: Linking with certain ImageMagick 
	versions didn't work correctly.
	
	* autotrace.dsp: Likewise.

	Message-ID: <3C84F0C1.4C989134@gmx.net>.
	
2002-03-06  Martin Weber <martweb@gmx.net>

	* fit.c (filter): fixed a bug in the filtering routine.
	avoid to use epsilon_equal.

	Message-ID: <3C84F2FD.C35ACD34@gmx.net>.

2002-02-14  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.h (struct _at_fitting_opts_type::despeckle_level): 
	made "unsigned".
	(struct _at_fitting_opts_type): Corrected wrong comments.
